--- a/notes.html
+++ b/notes.html
@@ -125,5 +125,16 @@ git commit -m "Add login feature"</code></pre>
         <code>bugfix-abc</code>.
       </li>
     </ul>
+    <a
+      href="https://www.atlassian.com/git/tutorials/using-branches"
+      style="
+        text-decoration: none;
+        color: white;
+        background-color: black;
+        padding: 7px;
+        border-radius: 5px;
+      "
+      >Learn more</a
+    >
   </body>
 </html>
