master : changed the definition

--- a/notes.html
+++ b/notes.html
@@ -42,9 +42,9 @@
 
     <h2>Definition</h2>
     <p>
-      A branch in Git is a lightweight, movable pointer to a commit. Branches
-      allow you to work on different features or fixes simultaneously without
-      affecting the main codebase. The default branch in Git is typically called
+      A branch in Git is like a separate workspace where you can make changes
+      without affecting the main project. It helps you work on new features or
+      fixes independently. The default branch is usually called
       <code>main</code> or <code>master</code>.
     </p>
 
