added exclamatery marks in learn more button

--- a/notes.html
+++ b/notes.html
@@ -134,7 +134,7 @@ git commit -m "Add login feature"</code></pre>
         padding: 7px;
         border-radius: 5px;
       "
-      >Learn more</a
+      >Learn more !!</a
     >
   </body>
 </html>
