--- a/notes.html
+++ b/notes.html
@@ -125,6 +125,7 @@ git commit -m "Add login feature"</code></pre>
         <code>bugfix-abc</code>.
       </li>
     </ul>
+    <img src="feature-branches.svg" alt="" />
     <a
       href="https://www.atlassian.com/git/tutorials/using-branches"
       style="
